Updated italian translation

--- a/src/resources/i18n/spark_i18n_it.properties
+++ b/src/resources/i18n/spark_i18n_it.properties
@@ -198,6 +198,17 @@
 ##     Added key: 'delete.log.permanently'
 ##     Added key: 'delete.permanently'
 ##     Added key: 'label.contactlist.avatarsize'
+##     Added key: 'title.qq.registration'
+##     Added key: 'message.enter.qq'
+##
+## 2.6.0
+##
+## 	   Added key: 'apply'
+## 	   Added key: 'title.subscription.request'
+## 	   Added key: 'label.add.to.roster'
+## 	   Added key: 'label.audio.device'
+## 	   Added key: 'label.video.device'
+## 	   Added key: 'button.re.detect'
 ##
 ## 2.6.0 beta 1
 ##     Added key: 'menuitem.block.contact'
@@ -405,7 +416,7 @@ label.confirm.password = &Conferma Password
 label.conflict.error = Impossibile loggarsi, l'account \u00e8 gi\u00e0 loggato.
 label.contact.to.find = Cerca contatto
 label.contactlist.avatarsize =
-label.contactlist.fontsize = Dimensione font lista contatti: 
+label.contactlist.fontsize = Dimensione font lista contatti:
 label.country = N&azione
 label.create.account = Crea un &Account
 label.department = &Dipartimento
@@ -426,7 +437,6 @@ label.jabber.id = &Jabber ID
 label.jid = &JID
 label.job.title = &Posizione Lavorativa
 label.last.name = &Cognome
-label.work = Lavoro
 label.local.time = &Ora Locale
 label.message = Messaggio
 label.message.style = &Stile Messaggi
@@ -451,14 +461,16 @@ label.postal.code = &CAP
 label.presence = &Presenza
 label.priority = P&riorit\u00e0
 label.protocol = &Protocollo
-label.receieved = &Ricevuti
+label.received = &Ricevuti
 label.rename.to = Rinomina in
 label.resource = &Risorsa
 label.response.timeout = &Timeout di Risposta (sec)
 label.room = &Stanza
 label.room.name = &Nome Stanza
 label.room.topic= &Argomento Stanza
+label.search = Cerca
 label.search.service = &Servizio di Ricerca
+label.seconds = Seconds
 label.server = &Server
 label.server.address = &Indirizzo Server
 label.show = Show:
@@ -467,6 +479,7 @@ label.state.and.province = &Regione
 label.street.address = &Via
 label.time = Orario: {0}
 label.time.till.idle = &Intervallo di Inattivit\u00e0 (min)
+label.time.till.idlemessage = Messaggio automatico di a&ssenza
 label.timeformat = Usa {0}
 label.transfer.download.directory = &Directory di Download:
 label.transfer.timeout = &Timeout di Trasferimento(min):
@@ -476,37 +489,54 @@ label.user.on.public.network = L'utente \u00e8 in una rete pubblica
 label.username = &Nome Utente
 label.version = &Versione
 label.web.page = &Home Page
+label.work = Lavoro
 label.xmpp.port = Porta &XMPP
+label.krb.realm = Realm
+label.krb.kdc = KDC
+label.which.pki.method = Quale metodo PKI?
+label.choose.file = Scegli il file
+label.trust.store.password = Fidati della password memorizzata
+label.enter.password = Inserisci password
+label.move.focus.forwards = Sposta il focus avanti
+label.move.focus.backwards = Sposta il focus indietro
+label.keystore.location = Locazione Keystore
+label.truststore.location = Locazione Truststore
+label.pkcs.library.file = File di libreria PKCS#11
+label.x509.certificate = Certificato X.509
+label.apple.keychain = Apple KeyChain
+label.add.to.roster = Aggiungi utente all'elenco
+label.audio.device = &Audio device
+label.video.device = &Video device
 
 menuitem.about = Versione
 menuitem.actions = Azioni
 menuitem.add = Aggiungi
 menuitem.add.as.contact = Aggiungi come contatto
-menuitem.add.contact = Aggiungi Contatti
-menuitem.add.contact.group = Aggiungi Gruppi di contatti
+menuitem.add.contact = Aggiungi contatti
+menuitem.add.contact.group = Aggiungi gruppi di contatti
 menuitem.alert.when.online = Avverti quanto l'utente \u00e8 disponibile
 menuitem.ban = Ban
 menuitem.ban.user = Ban Utente
 menuitem.block.user = Blocca Utente
 menuitem.broadcast.to.group = Messaggio Broadcast al gruppo
-menuitem.browse.service = Elenca Servizi
-menuitem.change.nickname = Cambia Nickname
-menuitem.change.subject = Cambia Argomento
+menuitem.browse.service = Elenca servizi
+menuitem.change.nickname = Cambia nickname
+menuitem.change.subject = Cambia argomento
 menuitem.chat = Chat
 menuitem.check.for.updates = Verifica la presenza di aggiornamenti
 menuitem.contacts = Contatti
 menuitem.copy.to = Copia in
 menuitem.delete = Cancella
-menuitem.delete.login.information = Cancella le Informazioni di Login
-menuitem.destroy.room = Distruggi Stanza
+menuitem.delete.login.information = Cancella le informazioni di login
+menuitem.destroy.room = Distruggi stanza
 menuitem.dial = Componi
 menuitem.edit = Modifica
-menuitem.edit.my.profile = &Modifica il tuo Profilo...
-menuitem.edit.status.message = Modifica Messaggi di Stato personalizzati...
-menuitem.enter.login.information = Inserisci le Informazioni di Login
+menuitem.edit.my.profile = &Modifica il tuo profilo...
+menuitem.edit.status.message = Modifica messaggi di stato personalizzati...
+menuitem.enter.login.information = Inserisci le informazioni di login
 menuitem.exit = Esci
-menuitem.grant.moderator = Concedi Moderatore
-menuitem.grant.voice = Concedi Voice
+menuitem.grant.moderator = Concedi moderatore
+menuitem.grant.voice = Concedi voice
 menuitem.help = Help
 menuitem.hide = Nascondi
 menuitem.invite.group.to.conference = Invita il gruppo in una stanza
@@ -558,6 +588,16 @@ menuitem.view.logs = Visualizza Logs
 menuitem.view.profile = Visualizza Profilo
 menuitem.view.room.info = Visualizza Informazioni sulla Stanza
 menuitem.voice = Voice
+menuitem.show.offline.users = Mostra utenti offline
+menuitem.show.contact.statusmessage = Mostra messaggio di stato
+menuitem.bookmark.room = Memorizza stanza
+menuitem.refresh = Aggiorna
+menuitem.create.room = Crea o unisci stanza
+menuitem.expand.all.groups = Espandi tutti i gruppi
+menuitem.collapse.all.groups = Collassa tutti i gruppi
+menuitem.inivite.again = Invita di nuovo
+menuitem.chatframe.option = Opzioni
+menuitem.add.groupchat.invitetobookmark = Invita automaticamente gli utenti nella stanza memorizzata
 
 message = &Messaggio
 message.account.create = Crea un nuovo account di chat.
@@ -577,10 +617,13 @@ message.autenticating = Autenticazione in corso
 message.away.idle = L'utente \u00e8 assente per inattivit\u00e0.
 message.bookmark.temporary.room.error = Impossibile rendere preferita una stanza temporanea
 message.broadcast.from = Messaggio broadcast da {0}
+message.broadcast.no.user.selected = Prego selezionare almeno un destinatario
+message.broadcast.no.text = Prego inserire il testo da diffondere
 message.broadcast.message.sent = Il messaggio broadcast \u00e8 stato inviato.
 message.broadcast.to = Digitare il messaggio broadcast da inviare a {0}
 message.broadcasted.to = Il messaggio broadcast \u00e8 stato inviato ai seguenti utenti:\n{0}
 message.buzz.alert.notification = Ottieni l'attenzione dell'utente.
+message.buzz.message = {0} richiede la tua attenzione
 message.buzz.sent = Invia una notifica all'utente.
 message.calling = Chiamata a {0} in corso
 message.came.online = {0} \u00e8 online dalle {1}
@@ -618,10 +661,14 @@ message.enter.gadugadu = Digita nei campi sottostanti il tuo nome utente e passw
 message.enter.gtalk = Digita nei campi sottostanti il tuo nome utente e password per GTalk.
 message.enter.icq = Digita nei campi sottostanti il tuo nome utente e password per ICQ.
 message.enter.irc = Digita nei campi sottostanti l'username, la password, e il nickname per IRC.
+message.enter.sametime = Inserisci qua sotto il tuo username e password Sametime
+message.enter.facebook = Inserisci qua sotto il tuo username e password Facebook
+message.enter.myspace = Inserisci qua sotto il tuo username e password MySpace
 message.enter.jabber.id = Digita Jabber ID
 message.enter.message.to.broadcast = Inserisci il messaggio broadcast da inviare al tuo elenco.
 message.enter.msn = Digita nei campi sottostanti il tuoi nome utente e password per MSN.
 message.enter.new.subject = Digita un nuovo argomento
+message.enter.qq = Inserisci qua sotto il tuo numero e password QQ
 message.enter.room.password = Digita la Password della stanza
 message.enter.simple = Digita nei campi sottostanti il tuo nome utente e password per SIMPLE.
 message.enter.valid.jid = Inserisci un Jabber ID valido
