SPARK-1754 Another Italian translation update

--- a/src/resources/i18n/spark_i18n_it.properties
+++ b/src/resources/i18n/spark_i18n_it.properties
@@ -328,8 +328,8 @@ checkbox.private.room = La stanza &\u00e8 privata
 checkbox.save.password = &Salva Password
 checkbox.show.avatars.in.contact.list = Mostra gli &avatars nella lista contatti
 checkbox.show.notifications.in.conference = &Mostra notifiche nelle Stanze
-checkbox.show.time.in.chat.window = &Mostra Orario nella Finestra di Chat
-checkbox.show.toaster = Mostra &Popup a Comparsa
+checkbox.show.time.in.chat.window = &Mostra orario nella finestra di chat
+checkbox.show.toaster = Mostra &Popup a comparsa
 checkbox.sort.asc.history = Ordina messaggi per data crescente nella storia contatti
 checkbox.split.chat.window = Dividi le &Finestre di chat (Richiede il riavvio di Spark)
 checkbox.start.in.tray = &Avvia Spark nella Tray Bar
@@ -369,11 +369,13 @@ group.chat.name.notification = Visto il tuo nome...
 group.chat.name.match = Il tuo nome è stato citato in una chat:
 
 label.accounts = &Accounts
+label.home = Home
 label.add.conference.service = &Aggiungi un servizio conferenza
 label.add.jid = &Aggiungi JID
 label.add.task = &Aggiungi impegno
 label.auto.login = &Login Automatico
 label.available.users.in.roster =   &Utenti disponibili in Elenco
+label.avatar = Avatar:
 label.cancel = Annulla
 label.cell = Cell
 label.change.password.to = &Cambia Password
@@ -385,15 +387,20 @@ label.confirm.password = &Conferma Password
 label.conflict.error = Impossibile loggarsi, l'account \u00e8 gi\u00e0 loggato.
 label.contact.to.find = Cerca contatto
 label.contactlist.avatarsize =
+label.recent.conversation = Conversazioni recenti
+label.frequent.contacts = Contatti frequenti
+label.contactlist.avatarsize =  Dimensione avatar nella lista contatti:
 label.contactlist.fontsize = Dimensione font lista contatti: 
 label.country = N&azione
 label.create.account = Crea un &Account
 label.department = &Dipartimento
 label.dial = &Chiama
+label.display.time = Mostra orario:
+label.downloads = Download
 label.due = Entro
 label.email.address = &Email
 label.emoticons = &Emoticons
-label.enter.address = Inserisci Indirizzo
+label.enter.address = Inserisci indirizzo
 label.enter.group.name = Inserisci il nome del nuovo gruppo
 label.fax = &Fax
 label.find = &Cerca
@@ -415,7 +422,7 @@ label.mobile = &Cellulare
 label.na = n/a
 label.name = &Nome
 label.network = Ret&e
-label.new.nickname = Nuovo Nickname
+label.new.nickname = Nuovo nickname
 label.nickname = &Nickname
 label.number = &Numero
 label.ok = OK
@@ -423,7 +430,7 @@ label.old.ssl = &Usa vecchio metodo su porta SSL
 label.os = &Sistema Operativo
 label.pager = &Cercapersone
 label.password = &Password
-label.passwordreset = Reset Password
+label.passwordreset = Reset password
 label.phone = &Telefono
 label.port = &Porta
 label.postal.code = &CAP
@@ -433,47 +440,66 @@ label.protocol = &Protocollo
 label.receieved = &Ricevuti
 label.rename.to = Rinomina in
 label.resource = &Risorsa
-label.response.timeout = &Timeout di Risposta (sec)
+label.response.timeout = &Timeout di risposta (sec)
 label.room = &Stanza
-label.room.name = &Nome Stanza
-label.room.topic= &Argomento Stanza
-label.search.service = &Servizio di Ricerca
+label.room.name = &Nome stanza
+label.room.topic= &Argomento stanza
+label.search.service = &Servizio di ricerca
 label.server = &Server
-label.server.address = &Indirizzo Server
+label.server.address = &Indirizzo server
 label.show = Show:
 label.software = &Software
 label.state.and.province = &Regione
 label.street.address = &Via
 label.time = Orario: {0}
-label.time.till.idle = &Intervallo di Inattivit\u00e0 (min)
+label.time.till.idle = &Intervallo di inattivit\u00e0 (min)
 label.timeformat = Usa {0}
-label.transfer.download.directory = &Directory di Download:
-label.transfer.timeout = &Timeout di Trasferimento(min):
+label.transfer.download.directory = &Directory di download:
+label.transfer.timeout = &Timeout di trasferimento(min):
 label.unable.to.add.contact = Impossibile aggiungere il contatto.
 label.use.default = Usa Predefinito
 label.user.on.public.network = L'utente \u00e8 in una rete pubblica
-label.username = &Nome Utente
+label.username = &Nome utente
 label.version = &Versione
-label.web.page = &Home Page
+label.web.page = &Home page
 label.work = Lavoro
 label.xmpp.port = Porta &XMPP
+label.enter.password = Inserisci password
+label.move.focus.forwards = Sposta il focus avanti
+label.move.focus.backwards = Sposta il focus indietro
+label.keystore.location = Locazione keystore
+label.truststore.location = Locazione truststore
+label.pkcs.library.file = File di libreria PKCS#11
+label.x509.certificate = Certificato X.509
+label.apple.keychain = Apple keyChain
+label.add.to.roster = Aggiungi utente all'elenco
 
 menuitem.about = Versione
 menuitem.actions = Azioni
+menuitem.bookmarks = Preferiti
 menuitem.add = Aggiungi
 menuitem.add.as.contact = Aggiungi come contatto
 menuitem.add.contact = Aggiungi Contatti
 menuitem.add.contact.group = Aggiungi Gruppi di contatti
+menuitem.add.groupchat.myname = Evidenzia il mio &nome quando qualcuno lo dice
+menuitem.add.groupchat.mytext = &Evidenzia il mio testo quando dico qualcosa
+menuitem.add.groupchat.popname = Mostra finestra a comparsa quando qualcuno dice il mio nome
+menuitem.add.groupchat.showjoinleavemessage = &Mostra messaggi di unione e uscita
+menuitem.add.groupchat.showrolesinsteadofstatus = Mostra icone di ruolo invece che di presenza
+menuitem.add.groupchat.auto.accept.invite = &Accetta automaticamente gli inviti alle chat di gruppo
+menuitem.add.groupchat.random.colors = I nomi hanno colori &differenti
+menuitem.always.on.top = Sempre in primo piano
 menuitem.alert.when.online = Avverti quanto l'utente \u00e8 disponibile
-menuitem.ban = Ban
-menuitem.ban.user = Ban Utente
-menuitem.block.user = Blocca Utente
-menuitem.broadcast.to.group = Messaggio Broadcast al gruppo
+menuitem.ban = Bandisci
+menuitem.ban.user = Bandisci utente
+menuitem.block.user = Blocca utente
+menuitem.broadcast.to.group = Messaggio di broadcast al gruppo
 menuitem.browse.service = Elenca Servizi
 menuitem.change.nickname = Cambia Nickname
 menuitem.change.subject = Cambia Argomento
 menuitem.chat = Chat
 menuitem.check.for.updates = Verifica la presenza di aggiornamenti
+menuitem.connect = File
 menuitem.contacts = Contatti
 menuitem.copy.to = Copia in
 menuitem.delete = Cancella
