--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -355,7 +355,7 @@ checkbox.play.sound.on.new.message = &Play sound when new message arrives
 checkbox.play.sound.on.outgoing.message = Play sound when message is &sent
 checkbox.play.sound.when.offline = Play sound when user goes &offline
 checkbox.private.room = Room is private
-checkbox.save.password = Sa&ve password
+checkbox.save.password = Save password
 checkbox.show.avatars.in.contactlist = Show &avatars in contact list
 checkbox.show.notifications.in.conference = Show &notifications in conference rooms
 checkbox.show.time.in.chat.window = Show &time in chat window
