Italian translation and ordered some items in english file

--- a/src/resources/i18n/spark_i18n_it.properties
+++ b/src/resources/i18n/spark_i18n_it.properties
@@ -258,11 +258,11 @@ ok = Ok
 open = Apri
 open.folder = Apri Cartella
 participants = Partecipanti
+refresh = Aggiorna
 reject = Rifiuta
 retry = Riprova
 room.name = Nome Stanza
 save = Salva
-refresh = Aggiorna
 subject = Argomento
 unfiled = Altri
 use.default = Usa Predefinito
@@ -312,8 +312,8 @@ button.re.detect = &Rileva
 button.reconnect = &Riconnetti
 button.reconnect2 = Riconnetti
 button.refresh = &Aggiorna
-button.reject = Rifiuta
 button.register = &Registrati
+button.reject = Rifiuta
 button.remove.bookmark = Elimina Preferito
 button.roster = &Elenco
 button.save = &Salva
@@ -528,10 +528,12 @@ menuitem.add.groupchat.showjoinleavemessage = &Mostra messaggi di unione e uscit
 menuitem.add.groupchat.showrolesinsteadofstatus = Mostra icone di ruolo invece che di presenza
 menuitem.add.groupchat.auto.accept.invite = &Accetta automaticamente gli inviti alle chat di gruppo
 menuitem.add.groupchat.random.colors = I nomi hanno colori &differenti
+menuitem.affiliation = Affiliazione
 menuitem.always.on.top = Sempre in primo piano
 menuitem.alert.when.online = Avverti quanto l'utente \u00e8 disponibile
 menuitem.ban = Bandisci
 menuitem.ban.user = Bandisci utente
+menuitem.block.contact = Blocca contatto
 menuitem.block.user = Blocca utente
 menuitem.broadcast.to.group = Messaggio di broadcast al gruppo
 menuitem.browse.service = Elenca servizi
@@ -552,6 +554,9 @@ menuitem.edit.status.message = Modifica messaggi di stato personalizzati...
 menuitem.enter.login.information = Inserisci le informazioni di login
 menuitem.exit = Esci
 menuitem.grant.moderator = Concedi moderatore
+menuitem.grant.member = Concedi Membership
+menuitem.grant.admin = Concedi Admin
+menuitem.grant.owner = Concedi Ownership
 menuitem.grant.voice = Concedi voice
 menuitem.help = Help
 menuitem.hide = Nascondi
@@ -567,6 +572,7 @@ menuitem.lookup.profile = &Ricerca Profilo...
 menuitem.move.to = Sposta in
 menuitem.online.help = Online Help
 menuitem.open = Apri
+menuitem.open.with = Apri con...
 menuitem.plugins = &Plugins
 menuitem.preferences = Preferenze
 menuitem.remove = Elimina
@@ -578,26 +584,30 @@ menuitem.remove.service = Rimuovi Servizio
 menuitem.rename = Rinomina
 menuitem.revoke.moderator = Rimuovi Moderatore
 menuitem.revoke.voice = Rimuovi Voice
+menuitem.revoke.member = Revoca Membership
+menuitem.revoke.admin = Revoca Admin
+menuitem.revoke.owner = Revoca Ownership
 menuitem.save = Salva
 menuitem.save.as = Salva come...
-menuitem.send.a.file = Invia un File
-menuitem.send.a.message = Invia un Messaggio...
-menuitem.set.status.message = Imposta Messaggio di Stato...
-menuitem.show.empty.groups = Mostra i Gruppi Vuoti
+menuitem.send.a.file = Invia un file
+menuitem.send.a.message = Invia un messaggio...
+menuitem.set.status.message = Imposta messaggio di stato...
+menuitem.show.empty.groups = Mostra i gruppi vuoti
 menuitem.show.offline.group = Raggruppa gli utenti offline
-menuitem.show.traffic = Mostra finestra di Traffico
+menuitem.show.traffic = Mostra finestra di traffico
 menuitem.sign.in = Login
-menuitem.sign.in.at.login = Entra al Login
+menuitem.sign.in.at.login = Entra al login
 menuitem.sign.out = Logout
-menuitem.start.a.chat = Avvia una Chat
+menuitem.start.a.chat = Avvia una chat
 menuitem.start.a.conference = Apri una stanza...
 menuitem.status = Stato
 menuitem.subscribe.to = Iscriviti A
 menuitem.unban = Rimuovi Ban
-menuitem.unblock.user = Sblocca Utente
+menuitem.unblock.user = Sblocca utente
+menuitem.unblock.contact = Sblocca contatto
 menuitem.user.guide = Guida utente
-menuitem.view.client.version = Visualizza Versione Client
-menuitem.view.contact.history = Visualizza Storico dei Contatti
+menuitem.view.client.version = Visualizza versione client
+menuitem.view.contact.history = Visualizza storico dei contatti
 menuitem.view.downloads = Visualizza Downloads
 menuitem.view.last.activity = Visualizza l'ultima Attivit\u00e0
 menuitem.view.logs = Visualizza Logs
@@ -695,7 +705,16 @@ message.file.exists.question = Il file esiste gi\u00e0. Vuoi sovrascriverlo?
 message.file.size = Dimensione File: {0}
 message.file.transfer.canceled = Hai annullato il trasferimento del file.
 message.file.transfer.rejected = Il trasferimento del file non \u00e8 stato accettato da {0}.
-message.find.conference.services = Trova Servizi Conferenza
+message.file.transfer.dirnull = La directory di download per il trasferimento dei file non \u00e8 valida
+message.file.transfer.nodir = La directory di download per il trasferimento dei file non esiste
+message.file.transfer.cantwritedir Impossibile scrivere nella directory per il trasferimento dei file
+message.file.transfer.notification = Notifica trasferimento file
+message.file.transfer.short.message = sta invindo un file chiamato\:
+message.file.transfer.chat.window = Richiesta di trasferimento file:
+message.file.transfer.file.too.big.error = Il file selezionato è troppo grande.\nLa massima dimensione è {0} the selected file has {1}
+message.file.transfer.file.too.big.warning = Il file selezionato è troppo grande.\nVuoi continuare comunque?
+message.file.transfer.direrror.setdir = Clicca qua per cambiare la directory
+message.find.conference.services = Trova servizi di conferenza
 message.forbidden.error = Operazione non permessa dal server.
 message.gateway.nickname.error = Inserisci un nickname per l'account.
 message.gateway.password.error = Inserisci una password per l'account.
@@ -762,6 +781,7 @@ message.room.information.for = Informazioni della stanza per {0}
 message.save.profile = Per salvare le modifiche al tuo profilo, fai click su salva.
 message.search.for.contacts = Ricerca Contatti.
 message.search.for.other.people = Ricerca altre persone collegate al server.
+message.search.input.short = Per favore inserire almeno cinque lettere.
 message.search.service.not.available = Impossibile contattare i servizi di ricerca.
 message.searching.please.wait = Ricerca in corso. Attendere prego...
 message.select.add.room.to.add = Seleziona una stanza da inserire nell'elenco dei servizi.
@@ -792,6 +812,9 @@ message.supply.valid.timeout = Indica un timeout valido.
 message.timeout.error = Il valore del timeout deve essere di minimo 5 secondi.
 message.total.downloaded = Download totale
 message.transfer.cancelled = Il trasferimento file \u00e8 stato annullato.
+message.transfer.complete = Il trasferimento del file è completo ({0})
+message.transfer.progressbar.text.received = {0} ricevuto   @ {1}    {2}
+message.transfer.progressbar.text.sent = {0} inviato   @ {1}    {2}
 message.transfer.rate = Velocit\u00e0 del trasferimento
 message.transfer.refused = Il trasferimento file \u00e8 stato rifiutato.
 message.transfer.waiting.on.user = Attendi che {0} accetti il trasferimento del file.
@@ -799,6 +822,7 @@ message.unable.to.load.profile = Impossibile trovare il profilo di {0}
 message.unable.to.retrieve.last.activity = Impossibile determinare l''ultima attivit\u00e0 per {0}.
 message.unable.to.save.password = Impossibile cambiare la password. Prego contattare l'amministratore.
 message.unable.to.send.file = Impossibile inviare il file a {0}.
+message.unable.to.use.hostname.as.resource = Impossibile utilizzare l'hostname come risorsa
 message.unrecoverable.error = Errore non recuperabile.
 message.update.room.list = Aggiorna l'elenco delle stanze
 message.updating.cancelled = L'aggiornamento \u00e8 stato annullato.
@@ -841,6 +865,18 @@ message.your.ownership.revoked = I privilegi di proprietario ti sono stati revoc
 message.your.revoked.granted = I privilegi di administrator ti sono stati revocati.
 message.your.voice.granted = Hai avuto il VOICE in questa chat.
 message.your.voice.revoked = Ti \u00e8 stato tolto il VOICE in questa chat.
+message.groupchat.require.password = Questa stanza richiede una password per poter entrare
+message.groupchat.registered.member = Registrato correttamento con {0}
+message.search.for.history = Cerca nello storico conversazioni
+message.search.period.month.one = un mese per pagina
+message.search.period.year.one = un anno per pagina
+message.search.period.none = mostra tutto in una pagina
+message.search.page.timeperiod = scegli il periodo dei messaggi da visualizzare
+message.search.page.counter = indice corrente della pagina e numero totale di pagine
+message.search.page.right = naviga in avanti di una pagina
+message.search.page.left = naviga indietro di una pagina
+
+
 
 status.away = Torno subito
 status.custom.messages = Messaggi personalizzati
@@ -850,28 +886,39 @@ status.free.to.chat = Pronto a chattare
 status.on.phone = Al telefono
 status.online = Disponibile
 status.pending = In attesa
+status.invisible = Invisibile
+status.offline = Offline
 
-tab.available.plugins = Plugins Disponibili
+tab.available.plugins = Plugin disponibili
 tab.avatar = Avatar
 tab.business = Lavoro
 tab.conferences = Stanze
 tab.contacts = Contatti
+tab.deactivated.plugins = Plugin disattivati
 tab.general = Generale
 tab.home = Casa
 tab.installed.plugins = Plugins Installati
 tab.personal = Personale
 tab.proxy = Proxy
+tab.sso = SSO
+tab.pki = PKI
 
 title.about = About
-title.account.create.registration = Registrazione Account
-title.account.created = Account Creato
+title.advanced.connection.preferences = Preferenze avanzate di connessione
+title.account.created = Account creato
+title.account.create.registration = Registrazione account
+title.bookmarks = Preferiti
 title.add.contact = Aggiungi contatto
 title.add.contact.group = Aggiungi Gruppo di Contatti
 title.add.new.group = Aggiungi Nuovo Gruppo
 title.add.search.service = Aggiungi Servizio di Ricerca
 title.add.to.roster = Aggiungi all'Elenco
 title.address = Indirizzo
-title.advanced.connection.preferences = Preferenze Avanzate di Connessione
+title.advanced.connection.sso = Utilizza Single Sign-On (SSO)
+title.advanced.connection.usesso = Utilizza Single Sign-On (SSO) via GSSAPI
+title.advanced.connection.sso.account = Utilizza desktop account per "{0}" per il collegamento al server.
+title.advanced.connection.sso.unable = Impossibile connettersi con il Single Sign-On. Controlla le impostazioni del principal e del server.
+title.advanced.connection.sso.noprincipal = Spark non riesce a trovare il principal per l'uso del Single Sign-On. Per questo motivo SSO non funzionerà..
 title.alert = Alert
 title.appearance = Aspetto
 title.appearance.preferences = Aspetto
@@ -888,49 +935,66 @@ title.choose.incoming.sound = Scegli file audio da riprodurre all'arrivo
 title.choose.offline.sound = Scegli file audio da riprodurre in offline
 title.choose.outgoing.sound = Scegli file audio da riprodurre all'invio
 title.conference.invitation = Invito alla stanza
+title.client.logs = Log dei client
 title.conference.rooms = Stanze
-title.configure.chat.room = Configura la Chat
+title.configure.chat.room = Configura la chat
 title.configure.room = Configura la stanza
 title.confirmation = Conferma
-title.create.new.account = Crea Nuovo Account
+title.create.new.account = Crea nuovo account
 title.create.or.bookmark.room = Entra nella stanza o mettila nei preferiti
 title.create.or.join = Crea/Entra
-title.create.problem = Problema nella Creazione Account
-title.dial.phone = Chiama Numero
-title.disable.transport = Disabilita Trasporto
-title.download.complete = Download Completo
+title.create.problem = Problema nella creazione account
+title.delete.file = Vuoi procedere con la cancellazione del file?
+title.dial.phone = Chiama numero
+title.disable.transport = Disabilita trasporto
+title.download.complete = Download completato
 title.downloading.im.client = Download IM Client
 title.downloads = Downloads
 title.edit.custom.message = Modifica Messaggi Personalizzati
 title.edit.profile = Modifica le Informazioni del Profilo
 title.enter.reason = Inserisci Motivazione
 title.error = Errore
-title.file.exists = Il File Esiste
-title.file.transfer = Trasferimento File
-title.file.transfer.preferences = Preferenze di Trasferimento File
-title.find.conference.service = Cerca i Servizi Conferenza
+title.error.couldnt.open.file = Impossibile aprire il file
+title.error.delete.file = Impossibile cancellare file
+title.error.find.app = Impossibile trovare l''applicazione corrispondente
+title.error.rename.file = Impossibile rinominare file
+title.file = File
+title.filesize = Size
+title.file.exists = Il File esiste
+title.file.transfer = Trasferimento file
+title.file.transfer.preferences = Preferenze di trasferimento file
+title.find.conference.service = Cerca i servizi conferenza
 title.find.contacts = Ricerca Contatti
-title.gadugadu.registration = Credenziali Account GaduGadu
-title.general.chat.settings = Impostazioni Generali Chat
+title.gadugadu.registration = Credenziali account GaduGadu
+title.general.media = Impostazioni media
+title.general.chat.settings = Impostazioni generali chat
 title.group.chat = Chat di gruppo
-title.gtalk.registration = Credenziali Account GTalk
+title.gtalk.registration = Credenziali account GTalk
 title.history.for = Cronologia delle conversazioni per {0}
-title.icq.registration = Credenziali Account ICQ
-title.irc.registration = Credenziali Account IRC
+title.icq.registration = Credenziali account ICQ
+title.irc.registration = Credenziali account IRC
+title.aim.registration = Credenziali account AIM
+title.sametime.registration = Credenziali account Sametime
+title.facebook.registration = Credenziali account Facebook
+title.myspace.registration = Credenziali account MySpace
 title.incoming.call = Chiamata in arrivo
+title.input.fileexplorer = Inserire il nome del browser:
+title.input.newname = Inserire nuovo nome\:
+title.input.openwith = Inserire il nome dell''applicazione da utilizzare:
 title.invite.to.conference = Invita in una stanza
 title.jabber.browser = Browser
 title.join.conference.room = Entra nella stanza
 title.last.activity = Ultima Attivit\u00e0
 title.login = Login
 title.login.error = Errore di login
-title.login.settings = Parametri di Login
-title.lookup.profile = Ricerca del Profilo
-title.msn.registration = Credenziali Account MSN
+title.login.no.account = Impossibile trovare account
+title.login.settings = Parametri di login
+title.lookup.profile = Ricerca del profilo
+title.msn.registration = Credenziali account MSN
 title.name = Nome
-title.new.client.available = Nuovo Client Disponibile
-title.new.roster.group = Nuovo Gruppo di Elenco
-title.new.version.available = Nuova Versione disponibile
+title.new.client.available = Nuovo client disponibile
+title.new.roster.group = Nuovo gruppo di elenco
+title.new.version.available = Nuova versione disponibile
 title.no.updates = Nessun aggiornamento
 title.notes = Note
 title.notification = Notifica
@@ -939,26 +1003,29 @@ title.occupants = Presenti
 title.on.the.phone = Al Telefono
 title.password = Password
 title.passwords.no.match = Conferma passwords.
+title.password.required = Richiesta una password
 title.person.search = Ricerca Persona
 title.plugins = Plugins
 title.preferences = Preferenze
 title.profile.information = Informazioni Profilo
 title.profile.not.found = Profilo Non Trovato
-title.register.account = Registra nuovo Account
-title.registration.error = Errore di Registrazione
+title.qq.registration = Credenziali account QQ
+title.register.account = Registra nuovo account
+title.registration.error = Errore di registrazione
 title.reminder = Promemoria
-title.rename.roster.group = Rinomina l'Elenco
-title.room.destroyed = Stanza Distrutta
-title.room.information = Informazioni Stanza
+title.rename.roster.group = Rinomina l''elenco
+title.room.destroyed = Stanza eliminata
+title.room.information = Informazioni stanza
 title.roster = Elenco
 title.select.file.to.send = Seleziona i(l) file da inviare
 title.set.status.message = Imposta messaggi di stato
-title.simple.registration = Credenziali Account SIMPLE
+title.simple.registration = Credenziali account SIMPLE
 title.sound.preferences = Preferenze suoni
 title.sounds = Suoni
 title.spark.preferences = Preferenze di Spark
 title.start.chat = Avvia Chat
 title.status.message = Messaggio di Status
+title.task.notification = Notifica task
 title.tasks = Impegni
 title.transports = Trasporti
 title.tray.information = Informazioni sulla Tray
@@ -970,7 +1037,11 @@ title.view.room.information = Visualizza informazioni sulla stanza
 title.waiting.to.call = In attesa di effettuare la chiamata
 title.xmpp.registration = Credenziali Account XMPP
 title.yahoo.registration = Credenziali Account Yahoo
+title.appearance.showVCards = Mostra &VCards nella lista dei contatti
+title.subscription.request = Richiesta di sottoscrizione
 
+
+tooltip.place.a.call = Effettua una chiamata questa persona
 tooltip.appearance = Modifica l'aspetto di Spark
 tooltip.file.transfer = Impostazioni trasferimento file
 tooltip.notifications = Notifica preferenze per le chat in arrivo.
@@ -981,8 +1052,75 @@ tooltip.view.changelog = Visualizza il ChangeLog
 tooltip.view.history = Visualizza lo storico delle conversazioni
 tooltip.view.readme = Visualizza ReadMe
 
-tree.conference.services = Servizi Conferenza
-tree.users.in.room = Utenti nella Stanza
+
+tree.conference.services = Servizi conferenza
+tree.users.in.room = Utenti nella stanza
+
+
+lookandfeel.select = Select Look & Feel
+lookandfeel.change.now = Change now
+lookandfeel.tooltip.restart.no = No restart is needed
+lookandfeel.tooltip.restart.yes = To toggle a System Look&Feel press Save and restart Spark.
+lookandfeel.color.label = Colors
+lookandfeel.color.red = Red
+lookandfeel.color.green = Green
+lookandfeel.color.blue = Blue
+lookandfeel.color.opacity = Opacity
+lookandfeel.color.saved = Color saved
+
+
+
+##Settings for the privacy plugin
+privacy.title.preferences = Spark Privacy Preferences
+privacy.title.panel = Please use right mouse button
+privacy.label.iq.desc = Query
+privacy.label.pin.desc = Presence in
+privacy.label.pout.desc = Presence out
+privacy.label.msg.desc = Messages
+privacy.border.information = Privacy Information
+privacy.label.information = Use right click menu to add or delete lists or items
+privacy.root.node = Privacy Lists
+privacy.label.preferences = Privacy Plugin
+pricacy.tooltip.preferences = Spark privacy settings
+privacy.label.list.is.active = Current active list:
+privacy.label.list.is.default = Default list:
+privacy.border.block = Bloca
+privacy.pick.one.or.more = Pick one or more items to add to the list
+privacy.title.add.picker = Add Items to List
+privacy.node.contacts = Contatti
+privacy.node.groups = Gruppi
+privacy.menu.add.contacts = Add Contacts to list
+privacy.menu.add.groups = Add Groups to list
+privacy.menu.add.rem.items = Remove {0} items from list
+privacy.menu.remove = Remove
+privacy.menu.activate.list = Activate
+privacy.menu.default.list = Set as default
+privacy.menu.add.list = Add list
+privacy.menu.remove.list = Remove list
+privacy.dialog.add.list = Please enter list name
+privacy.dialog.rem.list = Do you really want to remove {0}?
+privacy.status.menu.entry = Privacy Lists
+privacy.name.for.default.list = Default
+privacy.button.no.list.selected = No list selected
+privacy.menuitem.deactivate.current.list = Deactivate {0}
+privacy.label.not.supported = Privacy lists are not supported by server.
+
+##Stunfallback in media settings
+stun.border.label = STUN fallback server
+stun.server.addr = STUN Server:
+stun.server.port = STUN Port:
+
+composing = {0} is typing...
+paused = {0} has stopped typing
+active = {0} is paying attention
+inactive = {0} is doing something else
+gone = {0} is doing something else
 
 
 #!#
+action.viewlog=View Log
+
+dialog.confirm.to.reveal.visibility.title=Are you sure?
+dialog.confirm.to.reveal.visibility.msg=If you are going to proceed your invisibility will be revealed
+dialog.confirm.close.all.conferences.if.invisible.msg=If you want to proceed all conference room will be closed
+
