--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -919,6 +919,7 @@ title.advanced.connection.usesso = Use Single Sign-On (SSO) via GSSAPI
 title.advanced.connection.sso.account = This will use the Desktop Account for "{0}" to login to the server.
 title.advanced.connection.sso.unable = Unable to connect using Single Sign-On. Please check your principal and server settings.
 title.advanced.connection.sso.noprincipal = Spark is unable to find the principal to use for Single Sign-On. This will prevent SSO from working.
+title.advanced.connection.sso.smack3compat = Smack 3 compatibility mode.
 title.alert = Alert
 title.appearance = Appearance
 title.appearance.preferences = Customization
