SPARK-1746 one more Lithuanian translation

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -867,6 +867,7 @@ title.advanced.connection.usesso = Naudoti Single Sign-On (SSO) via GSSAPI
 title.advanced.connection.sso.account = Prisijungimui prie serverio bus panaudota vartotojo paskyra "{0}"
 title.advanced.connection.sso.unable = Nepavyko prisijungti naudojant Single Sign-On. Pra\u0161ome patikrinti prisijungimo duomenis ir serverio nustatymus.
 title.advanced.connection.sso.noprincipal = Spark negali rasti tinkamos paskyros prisijungimui su Single Sign-On. Tai neleis naudotis SSO.
+title.advanced.connection.sso.smack3compat = Smack 3 suderinamumo re\u017eimas.
 title.alert = Prane\u0161imas
 title.appearance = I\u0161vaizda
 title.appearance.preferences = Adaptavimas
