--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -379,7 +379,7 @@ checkbox.transport.tab.setting = Show available transports in tab (requires rest
 checkbox.conference.tab.setting = Show conference service in tab (requires restart)
 checkbox.use.hostname.as.resource = Use hostname as resource
 checkbox.use.version.as.resource = Use Spark version as resource
-checkbox.accept.all.certificates = Accept all certificates (self-signed/expired)
+checkbox.accept.all.certificates = Accept all certificates (self-signed/expired/not trusted)
 checkbox.disable.hostname.verification = Disable certificate hostname verification (not recommended)
 
 delete.log.permanently = Permanently delete log
