SPARK-1788 Update translation (not trusted - LT)

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -337,7 +337,7 @@ checkbox.transport.tab.setting = Rodyti prieinamus ry\u0161io kanalus kortel\u01
 checkbox.conference.tab.setting = Rodyti grupini\u0173 pokalbi\u0173 tarnyb\u0105 kortel\u0117je (reikalingas perkrovimas)
 checkbox.use.hostname.as.resource = Na&udoti kompiuterio vard\u0105 kaip resurs\u0105
 checkbox.use.version.as.resource = Naudot&i Spark versij\u0105 kaip resurs\u0105
-checkbox.accept.all.certificates = Priimti visus sertifikatus (self-signed, negaliojantys)
+checkbox.accept.all.certificates = Priimti visus sertifikatus (self-signed/negaliojantys/nepatikimi)
 checkbox.disable.hostname.verification = I\u0161jungti sertifikato vardo patikrinim\u0105 (nerekomenduojama)
 
 delete.log.permanently = Visi\u0161kas \u017eurnalo pa\u0161alinimas
